--- a/homeworks/HW1_clip_clap.ipynb
+++ b/homeworks/HW1_clip_clap.ipynb
@@ -58,7 +58,7 @@
         "   - Посчитайте текстовые векторы для подписей с помощью `CLIP text encoder`.\n",
         "\n",
         "2. Линейная аудио-проекция.\n",
-        "   - Реализуйте модель `AudioProjection` с одним линейным слоем, переводящим аудио-эмбеддинг в размерность текстового эмбеддинга CLIP.\n",
+        "   - Реализуйте модель `AudioProjection`, переводящую аудио-эмбеддинг в размерность текстового эмбеддинга CLIP.\n",
         "\n",
         "3. Контрастивное обучение.\n",
         "   - Обучите аудио-проекцию на датасете `AudioCaps` по схеме аудио ↔ текст с контрастивным лоссом.  \n",
